# anki

./: BUILD.bazel
ftl/: BUILD.bazel
pylib/anki/: BUILD.bazel
pylib/anki/_backend/: BUILD.bazel
pylib/rsbridge/: BUILD.bazel
qt/aqt/: BUILD.bazel
qt/aqt/data/: BUILD.bazel
rslib/: BUILD.bazel
rslib/i18n/: BUILD.bazel
src-dist/: BUILD.bazel
